--- a/package.json
+++ b/package.json
@@ -3,13 +3,30 @@
   "version": "1.0.0",
   "description": "Webpack starter config",
   "main": "index.js",
+  "browserslist": [
+    "last 2 versions"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack --mode=development"
   },
   "keywords": [
     "webpack",
     "js"
   ],
   "author": "Toavina Andriantsivolosy",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "autoprefixer": "^9.7.3",
+    "css-loader": "^3.4.1",
+    "extract-loader": "^3.1.0",
+    "file-loader": "^5.0.2",
+    "node-sass": "^4.13.0",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^8.0.0",
+    "source-map-loader": "^0.2.4",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
+  },
+  "dependencies": {}
 }
