--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "css-loader": "^3.4.1",
     "extract-loader": "^3.1.0",
     "file-loader": "^5.0.2",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.0",
     "postcss-loader": "^3.0.0",
+    "resolve-url-loader": "^3.1.1",
     "sass-loader": "^8.0.0",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^1.1.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
