--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "last 2 versions"
   ],
   "scripts": {
-    "dev": "webpack --mode=development"
+    "dev": "cross-env NODE_ENV=dev webpack --mode=development",
+    "build": "cross-env NODE_ENV=prod webpack --mode=production"
   },
   "keywords": [
     "webpack",
@@ -17,6 +18,7 @@
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^9.7.3",
+    "cross-env": "^7.0.0",
     "css-loader": "^3.4.1",
     "extract-loader": "^3.1.0",
     "file-loader": "^5.0.2",
@@ -29,7 +31,8 @@
     "style-loader": "^1.1.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1"
+    "webpack-dev-server": "^3.10.1",
+    "webpack-manifest-plugin": "^2.2.0"
   },
   "dependencies": {}
 }
