--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   ],
   "scripts": {
     "dev": "cross-env NODE_ENV=dev webpack --mode=development",
-    "build": "cross-env NODE_ENV=prod webpack --mode=production"
+    "build": "cross-env NODE_ENV=prod webpack --mode=production",
+    "hot": "cross-env NODE_ENV=dev webpack-dev-server --mode=development --hot"
   },
   "keywords": [
     "webpack",
@@ -32,7 +33,8 @@
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1",
-    "webpack-manifest-plugin": "^2.2.0"
+    "webpack-manifest-plugin": "^2.2.0",
+    "yargs": "^15.1.0"
   },
   "dependencies": {}
 }
