--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "babel-loader": "^8.0.6",
     "cross-env": "^7.0.0",
     "css-loader": "^3.4.1",
+    "eslint": "^6.8.0",
+    "eslint-loader": "^3.0.3",
     "extract-loader": "^3.1.0",
     "file-loader": "^5.0.2",
     "mini-css-extract-plugin": "^0.9.0",
@@ -35,6 +37,8 @@
     "sass-loader": "^8.0.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.1.2",
+    "stylelint": "^13.2.0",
+    "stylelint-webpack-plugin": "^1.2.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1",
