--- a/package.json
+++ b/package.json
@@ -20,30 +20,36 @@
   "author": "Toavina Andriantsivolosy",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
-    "autoprefixer": "^9.7.3",
-    "babel-loader": "^8.0.6",
-    "cross-env": "^7.0.0",
-    "css-loader": "^3.4.1",
-    "eslint": "^6.8.0",
-    "eslint-loader": "^3.0.3",
-    "extract-loader": "^3.1.0",
-    "file-loader": "^5.0.2",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.0",
-    "postcss-loader": "^3.0.0",
-    "resolve-url-loader": "^3.1.1",
-    "sass-loader": "^8.0.0",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "^1.1.2",
-    "stylelint": "^13.2.0",
-    "stylelint-webpack-plugin": "^1.2.3",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1",
-    "webpack-manifest-plugin": "^2.2.0",
-    "yargs": "^15.1.0"
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "@hail2u/css-mqpacker": "github:hail2u/node-css-mqpacker#v8.0.1",
+    "autoprefixer": "^9.0.0",
+    "babel-loader": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.3.0",
+    "custom-select": "latest",
+    "dart-sass": "^1.25.0",
+    "eslint": "^7.32.0",
+    "eslint-loader": "^4.0.2",
+    "extract-loader": "^5.1.0",
+    "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^2.3.0",
+    "postcss-custom-media": "^7.0.0",
+    "postcss-inline-svg": "^4.1.0",
+    "postcss-loader": "^6.1.1",
+    "resolve-url-loader": "^4.0.0",
+    "modaal": "^0.3.1",
+    "sass": "^1.42.1",
+    "sass-loader": "^12.1.0",
+    "source-map-loader": "^3.0.0",
+    "style-loader": "^3.3.0",
+    "stylelint": "^13.13.1",
+    "stylelint-webpack-plugin": "^3.0.1",
+    "webpack": "^5.55.1",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.3.0",
+    "webpack-manifest-plugin": "^4.0.2",
+    "yargs": "^17.2.1"
   },
   "dependencies": {}
 }
