Update/Upgrade Dependencies

--- a/package.json
+++ b/package.json
@@ -20,36 +20,36 @@
   "author": "Toavina Andriantsivolosy",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.6",
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
     "@hail2u/css-mqpacker": "github:hail2u/node-css-mqpacker#v8.0.1",
-    "autoprefixer": "^9.0.0",
-    "babel-loader": "^8.2.2",
+    "autoprefixer": "^10.4.13",
+    "babel-loader": "^9.1.2",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.3.0",
+    "css-loader": "^6.7.3",
     "custom-select": "latest",
-    "dart-sass": "^1.25.0",
-    "eslint": "^7.32.0",
-    "eslint-loader": "^4.0.2",
+    "eslint": "^8.35.0",
+    "eslint-webpack-plugin": "^4.0.0",
     "extract-loader": "^5.1.0",
     "file-loader": "^6.2.0",
-    "mini-css-extract-plugin": "^2.3.0",
-    "postcss-custom-media": "^7.0.0",
-    "postcss-inline-svg": "^4.1.0",
-    "postcss-loader": "^6.1.1",
-    "resolve-url-loader": "^4.0.0",
+    "mini-css-extract-plugin": "^2.7.2",
     "modaal": "^0.3.1",
-    "sass": "^1.42.1",
-    "sass-loader": "^12.1.0",
-    "source-map-loader": "^3.0.0",
-    "style-loader": "^3.3.0",
-    "stylelint": "^13.13.1",
-    "stylelint-webpack-plugin": "^3.0.1",
-    "webpack": "^5.55.1",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.3.0",
-    "webpack-manifest-plugin": "^4.0.2",
-    "yargs": "^17.2.1"
+    "postcss": "^8.4.21",
+    "postcss-custom-media": "^9.1.2",
+    "postcss-inline-svg": "^6.0.0",
+    "postcss-loader": "^7.0.2",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.58.3",
+    "sass-loader": "^13.2.0",
+    "source-map-loader": "^4.0.1",
+    "style-loader": "^3.3.1",
+    "stylelint": "^15.2.0",
+    "stylelint-webpack-plugin": "^4.1.0",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-manifest-plugin": "^5.0.0",
+    "yargs": "^17.7.1"
   },
   "dependencies": {}
 }
